# vrouter

./: pyproject.toml
src/: main.py
src/adapters/in_process/: vrouter_api.py
src/adapters/out_process/vrouter/: vrouter_adapter.py
src/application/ports/: vrouter_port.py
src/application/services/: vrouter_svc.py
src/config/vars/: .env
src/domain/models/: vrouter.py
src/domain/service/: vrouter_service.py
